fixup! Add FLOAT type basic implementation